Agregar interfaz usuario e inicializar script

--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
 </head>
 <body>
     <script src="main.js"></script>
+    <div id="app">
+        <div id="time">
+            <div id="value">
+
+            </div>
+            <div id="taskName">
+
+            </div>
+        </div>
+
+        <div class="tasks-container">
+            <div class="form">
+                <form action="" id="form">
+                    <input type="text" id="itTask">
+                    <input type="submit" id="btnAdd" value="Agregar Tarea">
+                </form>
+            </div>
+        </div>
+
+        <div id="tasks"></div>
+    </div>
 </body>
 </html>
